<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".TutorialActivity">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/go_back"
        android:padding="4dp"
        style="@style/button"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40">

        <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="0dp"
            android:enabled="false"
            android:paddingHorizontal="12dp"
            android:text="@string/send"
            android:visibility="invisible"
            tools:visibility="visible"
            android:layout_marginBottom="8dp"
            style="@style/button"/>

        <EditText
            android:id="@+id/editTextTutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_header"
            android:hint="@string/press_here"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/grey" />

        <TextView
            android:id="@+id/step_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/step_one"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>