<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next_fact_btn">

        <LinearLayout
            android:id="@+id/fact_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/current_fact_header_tv"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_header"
                    android:fontFamily="@font/stoke_light"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    android:text="@string/cat_facts"
                    android:textColor="@color/background"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/current_fact_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginHorizontal="16dp"
                android:layout_gravity="center_horizontal"
                android:maxWidth="400dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                tools:text="Lorem itsupm jitsup it dkofafsdfsdfdfddfdput ilo ldko itsup loiuj kdlfe."/>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/next_fact_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_fact"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/copy_paste_layout"
        style="@style/button"/>

    <LinearLayout
        android:id="@+id/copy_paste_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/ad_view">

        <TextView
            android:id="@+id/main_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_header"
            android:fontFamily="@font/stoke_light"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:textSize="16sp"
            android:text="@string/cat_facts_fast_paste"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/enable_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enable"
            style="@style/button"/>

        <Button
            android:id="@+id/tutorial_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/how_to_use"
            style="@style/button"/>
    </LinearLayout>

<!--    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:adSize="BANNER"
        app:layout_constraintBottom_toBottomOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>